--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "README.md"
   ],
   "scripts": {
+    "start": "node dist/react-doc-kit.js start",
     "build": "node-scripts build",
     "format": "node-scripts format",
     "lint": "node-scripts lint",
@@ -51,6 +52,11 @@
     "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "commander": "^10.0.0",
+    "rehype-mdx-title": "^2.0.0",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx-code-meta": "^2.0.0",
+    "remark-mdx-frontmatter": "^2.1.1",
     "rollup": "^3.19.1",
     "vite": "^4.2.0",
     "vite-tsconfig-paths": "^4.0.7"
@@ -68,6 +74,7 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.0.0"
   }
 }
