--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mdx-js/rollup": "^2.3.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
     "commander": "^10.0.0",
+    "fast-glob": "^3.2.12",
     "rehype-mdx-title": "^2.0.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
@@ -74,6 +75,7 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.0.0"
   }
